# WeixinClient-Python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: wheel.yml
examples/: recieve_message.py
include/: WeixinClient.h  client.h
src/: WeixinClient.cpp  WeixinClientWrapper.cpp
wechat/: __init__.py  log.py
